tests/vrml97/good/unrecognized-externproto.wrl
#VRML V2.0 utf8
EXTERNPROTO UnrecognizedNode [ exposedField SFBool sfboolField ]
[ "urn:unrecognized" ]
UnrecognizedNode { sfboolField TRUE }
