tests/vrml97/bad/route-to-field.wrl
#VRML V2.0 utf8
PROTO FromNode [ eventOut SFBool val_changed ] { Group {} }
PROTO ToNode [ field SFBool val TRUE ] { Group {} }
DEF FROM-NODE FromNode {}
DEF TO-NODE ToNode {}
ROUTE FROM-NODE.val TO TO-NODE.val
